--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -79,5 +79,6 @@
         "xlocmes": "cpp",
         "xlocmon": "cpp",
         "xloctime": "cpp"
-    }
+    },
+    "C_Cpp.errorSquiggles": "disabled"
 } 
